--- a/index.html
+++ b/index.html
@@ -470,6 +470,21 @@ body.dark h3 {
   </div>
 </div>
 
+<!-- Moon Toggle (Vector style) -->
+<div id="mode-toggle" style="
+  position: relative;
+  width: 100%;
+  max-width: 390px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: flex-end;
+  padding: 16px 22px;
+">
+  <svg id="moon-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="#6a5799" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-moon" style="cursor: pointer; transition: transform 0.3s ease;">
+    <path d="M21 12.79A9 9 0 0112.21 3a7 7 0 100 14.58A9 9 0 0021 12.79z"/>
+  </svg>
+</div>
+
   <script>
     function copyToClipboard(id, btn) {
       const input = document.getElementById(id);
