--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@ body.dark h3 {
     // Update input backgrounds
     document.querySelectorAll('.copy-input').forEach(input => {
       input.style.backgroundColor = darkMode ? '#3a3a3c' : '#f9fafc';
-      input.style.color = darkMode ? '#352a40' : '#1c1c1e';
+      input.style.color = darkMode ? '#b69ad4' : '#1c1c1e';
     });
 
  document.querySelectorAll('.copy-btn').forEach(btn => {
