--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ body.dark h3 {
       <li><strong> 04, 05, 06 Jul</strong> – 6:00 AM to 9:00 AM</li>
     </ul>
 
-    <h5> Free repeats anywhere in India </h5>
+    <li> Free repeats anywhere in India </li>
 
     <ul class="timeline">
       <li> 📍 Aerobics Room, Galaxy Club, Brigade Gateway, Rajajinagar, Bangalore North, 560055</li>
