--- a/index.html
+++ b/index.html
@@ -374,9 +374,11 @@ body.dark h3 {
     <p class="subtitle">with Vishal Merani</p>
     <h3>Lapse into meditation in minutes</h3>
     <p class="subtitle">Feel Good 😌 Live Light 🪶</p>
-    <li>⤷ Morning </li>
+   <ul class="features">
+    <li>⤷ Morning </li> </ul>
     <a href="https://www.artofliving.online/registration.php?event_id=883701" class="button" target="_blank">July 01-03, 7a-9a IST, Register here</a>
-    <li>⤷ Evening </li>    
+     <ul class="features">
+    <li>⤷ Evening </li> </ul>   
    <a href="https://www.artofliving.org/in-en/program/876667" class="button" target="_blank">July 13-15, 7p-9p IST, Register here</a>
 
     <ul class="features">
