--- a/index.html
+++ b/index.html
@@ -375,11 +375,9 @@ body.dark h3 {
     <h3>Lapse into meditation in minutes</h3>
     <p class="subtitle">Feel Good 😌 Live Light 🪶</p>
    <ul class="features">
-    <li>⤷ Morning </li> </ul>
-    <a href="https://www.artofliving.online/registration.php?event_id=883701" class="button" target="_blank">July 01-03, 7a-9a IST, Register here</a>
-     <ul class="features">
-    <li>⤷ Evening </li> </ul>   
-   <a href="https://www.artofliving.org/in-en/program/876667" class="button" target="_blank">July 13-15, 7p-9p IST, Register here</a>
+    <li>⤷ Pick AM or PM </li> </ul>
+    <a href="https://www.artofliving.online/registration.php?event_id=883701" class="button" target="_blank">July 01-03, 7a-9a IST, Register here</a> 
+    <a href="https://www.artofliving.org/in-en/program/876667" class="button" target="_blank">July 13-15, 7p-9p IST, Register here</a>
     <ul class="features">
       <li>⤷ Personal</li>
       <li>⤷ Customized</li>
