Update index.html new courses

--- a/index.html
+++ b/index.html
@@ -256,13 +256,13 @@ body.dark h3 {
 
   <!-- Card 1 -->
   <div class="iphone-frame">
-    <h1>This June,</h1>
+    <h1>This July,</h1>
     <h2>Discover DSAR</h2>
-    <p class="subtitle">with Vishal Merani</p>
+    <p class="subtitle">with Vishal Merani & Shweta Vyas</p>
     <h3>Stress, Sleep, Anxiety</h3>
     <p class="subtitle">Stop struggling! Decode and conquer</p>
 
-    <a href="https://www.artofliving.online/registration.php?event_id=883226" class="button" target="_blank"> Booked, see you soon </a>
+    <a href="https://www.artofliving.online/registration.php?event_id=888977" class="button" target="_blank"> 22-24 Jul, Register here </a>
 
     <ul class="features">
       <li>To calm anxiety</li>
@@ -271,7 +271,7 @@ body.dark h3 {
     </ul>
 
     <ul class="timeline">
-      <li>Time: 7:00 PM – 9:30 PM</li>
+      <li>Time: 8:00 PM – 10:30 PM</li>
      <li class="location-text"><strong>📍 Zoom | Online</strong></li>
 
     </ul>
@@ -279,12 +279,12 @@ body.dark h3 {
     <h4 class="queries-text">Queries & help @ 9818503888</h4>
 
     <div class="copy-box">
-      <input class="copy-input" type="text" value="Deep Sleep & Anxiety Relief | 25–27 June 2025 | https://aolt.in/883226 | Help: 9818503888" id="copyText1" readonly>
+      <input class="copy-input" type="text" value="Deep Sleep & Anxiety Relief | 22–24 Jul 2025 | https://aolt.in/888977 | Help: 9818503888" id="copyText1" readonly>
       <button class="copy-btn" onclick="copyToClipboard('copyText1', this)">Copy</button>
       <a class="wa-icon" target="_blank" id="waLink1" title="Share on WhatsApp"></a>
     </div>
 
-    <div class="footer">💤 25–27 June 2025 | Evening ♡ Online Sessions <br>
+    <div class="footer">💤 22–24 Jul 2025 | Evening ♡ Online Sessions <br>
 ॐ  Jai Guru Dev ॐ
 </div>
   </div>
@@ -292,7 +292,7 @@ body.dark h3 {
 
   <!-- Card 2 -->
   <div class="iphone-frame">
-    <h1>This July,</h1>
+    <h1>This July </h1>
     <h2>Happiness Program</h2>
     <p class="subtitle">with Vishal Merani</p>
     <h3>Hyper Detox with Sudarshan Kriya</h3>
@@ -343,7 +343,7 @@ body.dark h3 {
     <p class="subtitle">Feel Good 😌 Live Light 🪶</p>
    <ul class="features">
     <li>⤷ Pick AM or PM </li> </ul>
-    <a href="https://www.artofliving.online/registration.php?event_id=883701" class="button" target="_blank">July 01-03, 7a-9a IST, Register here</a> 
+    <a href="https://www.artofliving.online/registration.php?event_id=889316" class="button" target="_blank">July 17-17, 7a-9a IST, Register here</a> 
     <a href="https://www.artofliving.org/in-en/program/876667" class="button" target="_blank">July 13-15, 7p-9p IST, Register here</a>
     <ul class="features">
       <li>⤷ Personal</li>
