--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ body.dark h3 {
     <p class="subtitle">Feel Good 😌 Live Light 🪶</p>
    <ul class="features">
     <li>⤷ Pick AM or PM </li> </ul>
-    <a href="https://www.artofliving.online/registration.php?event_id=889316" class="button" target="_blank">July 17-17, 7a-9a IST, Register here</a> 
+    <a href="https://www.artofliving.online/registration.php?event_id=889316" class="button" target="_blank">July 15-17, 7a-9a IST, Register here</a> 
     <a href="https://www.artofliving.org/in-en/program/876667" class="button" target="_blank">July 13-15, 7p-9p IST, Register here</a>
     <ul class="features">
       <li>⤷ Personal</li>
@@ -431,7 +431,37 @@ body.dark h3 {
 </div>
   </div>
 
-<!-- Card 6 - Image Only -->
+ <!-- Card 6 -->
+  <div class="iphone-frame">
+    <h1> Workshop on,</h1>
+    <h2> Meditation and Breath </h2></h2>
+    <p class="subtitle">with Vishal Merani</p>
+    <h3> learn well-being online </h3>
+
+    <ul class="timeline">
+      <li><strong>📍 In-person, Bangalore Ashram </strong></li>
+    </ul>
+
+    <h4>For Bookings, reach out via team +91 9818503888 </h4>
+
+ <ul class="features">
+    <li>⤷ Pick AM or PM </li> </ul>
+    <a href="https://www.artofliving.org/in-en/program/889064" class="button" target="_blank">July 31 - Aug 03, 6:30a-8:30a IST, Register here</a> 
+    <ul class="features">
+
+    <div class="copy-box">
+      <input class="copy-input" type="text" value="Online Breath & Meditation Workshop,  Help: 9818503888" id="copyText6" readonly>
+      <button class="copy-btn" onclick="copyToClipboard('copyText6', this)">Copy</button>
+      <a class="wa-icon" target="_blank" id="waLink3" title="Share on WhatsApp"></a>
+    </div>
+
+    <div class="footer"> 🫁💨🎧🖥️🧘‍♂️ ♡  Online Sessions Only <br>
+ॐ  Jai Guru Dev ॐ
+</div>
+  </div>
+
+
+<!-- Card 7 - Image Only -->
 <div class="iphone-frame" style="padding: 0; border: none; box-shadow: none;">
   <img src="zenvm.png" alt="Meditation Image" style="width: 100%; border-radius: 20px;"/>
     
