--- a/index.html
+++ b/index.html
@@ -433,29 +433,31 @@ body.dark h3 {
 
  <!-- Card 6 -->
   <div class="iphone-frame">
-    <h1> Workshop on,</h1>
+    <h1> Workshop,</h1>
     <h2> Meditation and Breath </h2></h2>
     <p class="subtitle">with Vishal Merani</p>
     <h3> learn well-being online </h3>
+      <p class="subtitle">Just you, your breath, and a better you.</p>
+
+
+    <a href="https://www.artofliving.org/in-en/program/889064" class="button" target="_blank">July 31 - Aug 03, Register here</a> 
+
 
     <ul class="timeline">
-      <li><strong>📍 In-person, Bangalore Ashram </strong></li>
+    <li>Time: 8:00 PM – 10:30 PM</li>
+    <li><strong>📍 In-person, Bangalore Ashram </strong></li>
     </ul>
+
 
     <h4>For Bookings, reach out via team +91 9818503888 </h4>
 
- <ul class="features">
-    <li>⤷ Pick AM or PM </li> </ul>
-    <a href="https://www.artofliving.org/in-en/program/889064" class="button" target="_blank">July 31 - Aug 03, 6:30a-8:30a IST, Register here</a> 
-    <ul class="features">
-
     <div class="copy-box">
-      <input class="copy-input" type="text" value="Online Breath & Meditation Workshop,  Help: 9818503888" id="copyText6" readonly>
+      <input class="copy-input" type="text" value=" Breath & Meditation Workshop,  Help: 9818503888" id="copyText6" readonly>
       <button class="copy-btn" onclick="copyToClipboard('copyText6', this)">Copy</button>
       <a class="wa-icon" target="_blank" id="waLink3" title="Share on WhatsApp"></a>
     </div>
 
-    <div class="footer"> 🫁💨🎧🖥️🧘‍♂️ ♡  Online Sessions Only <br>
+    <div class="footer"> 🫁💨🖥️🧘‍♂️ ♡  Online Sessions Only <br>
 ॐ  Jai Guru Dev ॐ
 </div>
   </div>
