--- a/index.html
+++ b/index.html
@@ -221,6 +221,27 @@ body.dark h3 {
   color: #b69ad4;
 }
 
+.social-icons {
+  display: flex;
+  justify-content: center;
+  gap: 18px;
+  margin: 10px 0 20px;
+}
+
+.icon {
+  width: 28px;
+  height: 28px;
+  fill: var(--accent);
+  transition: fill 0.3s ease;
+}
+
+body.dark .icon {
+  fill: #b69ad4;
+}
+
+.icon:hover {
+  fill: var(--accent-hover);
+}
 
   </style>
 
@@ -469,6 +490,32 @@ body.dark h3 {
     
   </div>
 </div>
+
+<!-- Social Card -->
+<div class="iphone-frame" style="text-align: center; padding-top: 24px;">
+  <h1>Let's stay connected,</h1>
+  <h2>@Vishal Merani</h2>
+  <p class="subtitle">Explore insights, updates & vibes</p>
+
+  <div class="social-icons" style="margin: 18px auto;">
+    <a href="https://instagram.com/meranivishal target="_blank" aria-label="Instagram">
+      <svg class="icon" viewBox="0 0 24 24"><path d="M7 2C4.2 2 2 4.2 2 7v10c0 2.8 2.2 5 5 5h10c2.8 0 5-2.2 5-5V7c0-2.8-2.2-5-5-5H7zm10 2c1.7 0 3 1.3 3 3v10c0 1.7-1.3 3-3 3H7c-1.7 0-3-1.3-3-3V7c0-1.7 1.3-3 3-3h10zM12 7c-2.8 0-5 2.2-5 5s2.2 5 5 5 5-2.2 5-5-2.2-5-5-5zm0 2c1.7 0 3 1.3 3 3s-1.3 3-3 3-3-1.3-3-3 1.3-3 3-3zm4.5-3c-.3 0-.5.2-.5.5s.2.5.5.5.5-.2.5-.5S16.8 6 16.5 6z"/></svg>
+    </a>
+    <a href="https://x.com/meranivishal" target="_blank" aria-label="Twitter">
+      <svg class="icon" viewBox="0 0 24 24"><path d="M22.46 6c-.77.35-1.6.59-2.46.7a4.18 4.18 0 001.84-2.3 8.1 8.1 0 01-2.6 1A4.1 4.1 0 0012 8.13v.5C8.23 8.3 5.1 6.47 3.1 3.8c-.9 1.55-.4 3.5 1.1 4.5-.7 0-1.4-.2-2-.5v.05c0 2 1.4 3.8 3.3 4.2-.4.1-.9.2-1.3.2-.3 0-.6 0-.8-.05.6 1.8 2.3 3 4.3 3.1A8.3 8.3 0 012 19c1.5 1 3.3 1.5 5.2 1.5 6.3 0 9.7-5.2 9.7-9.7v-.4A7.1 7.1 0 0022.46 6z"/></svg>
+    </a>
+    <a href="https://in.linkedin.com/in/vishal-merani" target="_blank" aria-label="LinkedIn">
+      <svg class="icon" viewBox="0 0 24 24"><path d="M4.98 3.5C4.98 4.88 3.88 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4v12h-4V8zm7 0h3.6v1.7h.1c.5-1 1.7-2 3.4-2 3.6 0 4.3 2.3 4.3 5.2V20h-4v-5.3c0-1.3 0-3-1.8-3s-2.1 1.4-2.1 2.9V20h-4V8z"/></svg>
+    </a>
+    <a href="https://vishalmerani.blogspot.com/" target="_blank" aria-label="Blogspot">
+      <svg class="icon" viewBox="0 0 24 24"><path d="M19.6 9.2c-.2-.2-.4-.4-.5-.6-.4-.6-.5-1.2-.5-1.9C18.6 3.5 15.6 1 12 1H8C4.7 1 2 3.7 2 7v10c0 3.3 2.7 6 6 6h8c3.3 0 6-2.7 6-6v-4c0-1.4-.6-2.6-1.4-3.6zM10 9h3c.6 0 1 .4 1 1s-.4 1-1 1h-3c-.6 0-1-.4-1-1s.4-1 1-1zm4 7h-4c-.6 0-1-.4-1-1s.4-1 1-1h4c.6 0 1 .4 1 1s-.4 1-1 1z"/></svg>
+    </a>
+  </div>
+
+  <div class="footer">♡ Let's vibe, one post at a time.<br>ॐ Jai Guru Dev ॐ</div>
+</div>
+
+
 
   <script>
     function copyToClipboard(id, btn) {
