Update index.html instagram

--- a/index.html
+++ b/index.html
@@ -460,7 +460,6 @@ body.dark .icon {
     <h3> learn well-being online </h3>
       <p class="subtitle">Just you, your breath, and a better you.</p>
 
-
     <a href="https://www.artofliving.org/in-en/program/889064" class="button" target="_blank">July 31 - Aug 03, Register here</a> 
 
 
@@ -493,12 +492,12 @@ body.dark .icon {
 
 <!-- Social Card -->
 <div class="iphone-frame" style="text-align: center; padding-top: 24px;">
-  <h1>Let's stay connected,</h1>
+  <h1>To stay connected,</h1>
   <h2>@Vishal Merani</h2>
-  <p class="subtitle">Explore insights, updates & vibes</p>
+  <p class="subtitle">Explore insights, updates & posts</p>
 
   <div class="social-icons" style="margin: 18px auto;">
-    <a href="https://instagram.com/meranivishal target="_blank" aria-label="Instagram">
+    <a href="https://www.instagram.com/meranivishal/" target="_blank" aria-label="Instagram">
       <svg class="icon" viewBox="0 0 24 24"><path d="M7 2C4.2 2 2 4.2 2 7v10c0 2.8 2.2 5 5 5h10c2.8 0 5-2.2 5-5V7c0-2.8-2.2-5-5-5H7zm10 2c1.7 0 3 1.3 3 3v10c0 1.7-1.3 3-3 3H7c-1.7 0-3-1.3-3-3V7c0-1.7 1.3-3 3-3h10zM12 7c-2.8 0-5 2.2-5 5s2.2 5 5 5 5-2.2 5-5-2.2-5-5-5zm0 2c1.7 0 3 1.3 3 3s-1.3 3-3 3-3-1.3-3-3 1.3-3 3-3zm4.5-3c-.3 0-.5.2-.5.5s.2.5.5.5.5-.2.5-.5S16.8 6 16.5 6z"/></svg>
     </a>
     <a href="https://x.com/meranivishal" target="_blank" aria-label="Twitter">
