Update index.html timings update

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@ body.dark .icon {
 
 
     <ul class="timeline">
-    <li>Time: 8:00 PM – 10:30 PM</li>
+    <li>Time: 6:30 AM – 08:30 AM</li>
     <li><strong>📍 In-person, Bangalore Ashram </strong></li>
     </ul>
 
