--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@ body.dark .icon {
 <!-- Social Card -->
 <div class="iphone-frame" style="text-align: center; padding-top: 24px;">
   <h1>To stay connected,</h1>
-  <h2>@Vishal Merani</h2>
+  <h2>@MeraniVishal</h2>
   <p class="subtitle">Explore insights, updates & posts</p>
 
   <div class="social-icons" style="margin: 18px auto;">
