Update index.html b

--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@ body.dark .icon {
     </a>
   </div>
 
-  <div class="footer">♡ Let's vibe, one post at a time.<br>ॐ Jai Guru Dev ॐ</div>
+  <div class="footer">♡ Let's pray, chant, help one another - one post at a time.<br>ॐ Jai Guru Dev ॐ</div>
 </div>
 
 
