--- a/index.html
+++ b/index.html
@@ -509,6 +509,15 @@ body.dark .icon {
     <a href="https://vishalmerani.blogspot.com/" target="_blank" aria-label="Blogspot">
       <svg class="icon" viewBox="0 0 24 24"><path d="M19.6 9.2c-.2-.2-.4-.4-.5-.6-.4-.6-.5-1.2-.5-1.9C18.6 3.5 15.6 1 12 1H8C4.7 1 2 3.7 2 7v10c0 3.3 2.7 6 6 6h8c3.3 0 6-2.7 6-6v-4c0-1.4-.6-2.6-1.4-3.6zM10 9h3c.6 0 1 .4 1 1s-.4 1-1 1h-3c-.6 0-1-.4-1-1s.4-1 1-1zm4 7h-4c-.6 0-1-.4-1-1s.4-1 1-1h4c.6 0 1 .4 1 1s-.4 1-1 1z"/></svg>
     </a>
+   <a href="https://www.facebook.com/meranivishal" target="_blank" aria-label="Facebook">
+  <svg class="icon" viewBox="0 0 24 24"><path d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.99 3.66 9.12 8.44 9.88v-6.99H7.9v-2.89h2.54V9.41c0-2.5 1.49-3.89 3.77-3.89 1.09 0 2.23.2 2.23.2v2.45h-1.26c-1.24 0-1.63.77-1.63 1.56v1.87h2.78l-.44 2.89h-2.34v6.99C18.34 21.12 22 16.99 22 12z"/></svg>
+</a>
+
+<a href="https://www.quora.com/profile/Vishal-Merani" target="_blank" aria-label="Quora">
+  <svg class="icon" viewBox="0 0 24 24"><path d="M12.01 2C6.48 2 2 6.48 2 12c0 5.08 3.82 9.25 8.76 9.9.19-.63.45-1.34.8-1.95-2.68-.38-4.45-1.83-5.07-4.24 1.14.54 2.13.72 3.09.73-2.3-1.29-3.2-3.49-2.9-5.71.53-4.12 5.16-5.42 8.02-3.37 1.59 1.15 2.4 2.78 2.34 5.09-.07 2.46-1.19 4.24-3.11 4.86-.68.22-1.32.19-2.02.1.49.59.88 1.27 1.14 2.13 4.86-1.01 8.25-5.08 8.25-9.91 0-5.52-4.48-10-9.99-10z"/></svg>
+</a>
+
+
   </div>
 
   <div class="footer">♡ Let's pray, chant, help one another - one post at a time.<br>ॐ Jai Guru Dev ॐ</div>
