--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@ body.dark .icon {
 
     <ul class="timeline">
     <li>Time: 6:30 AM – 08:30 AM</li>
-    <li><strong>📍 In-person, Bangalore Ashram </strong></li>
+    <li><strong>📍 Online, Zoom </strong></li>
     </ul>
 
 
