--- a/index.html
+++ b/index.html
@@ -490,6 +490,21 @@ body.dark .icon {
   </div>
 </div>
 
+<!-- Podcast Card -->
+<div class="iphone-frame" style="padding: 0; border: none; box-shadow: none;">
+  <h1>Podcasts</h1>
+  <h2>With Vishal Merani</h2>
+  <a href="https://podcasts.vishalmerani.com/" class="button" target="_blank">🎧 Listen Now</a>
+  <p class="subtitle">Curated talks & insights</p>
+  <img src="zenvm.png" alt="Meditation Image" style="width: 100%; border-radius: 20px;"/> 
+  <div class="footer"> <br>
+ॐ  Jai Guru Dev ॐ
+</div>  
+
+</div>
+
+
+
 <!-- Social Card -->
 <div class="iphone-frame" style="text-align: center; padding-top: 24px;">
   <h1>To stay connected,</h1>
