--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@ body.dark .icon {
 
   </div>
 
-  <div class="footer">♡ Let's pray, chant, help one another - one post at a time.<br>ॐ Jai Guru Dev ॐ</div>
+  <div class="footer">♡ Let's pray, chant, meditate, sing, dance, share, help one another - one post at a time.<br>ॐ Jai Guru Dev ॐ</div>
 </div>
 
 
