--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@ body.dark .icon {
 </div>
 
 <!-- Podcast Card -->
-<div class="iphone-frame" style="padding: 0; border: none; box-shadow: none;">
+ <div class="iphone-frame">
   <h1>Podcasts</h1>
   <h2>With Vishal Merani</h2>
   <a href="https://podcasts.vishalmerani.com/" class="button" target="_blank">🎧 Listen Now</a>
@@ -499,7 +499,6 @@ body.dark .icon {
   <div class="footer"> <br>
 ॐ  Jai Guru Dev ॐ
 </div>  
-
 </div>
 
 
