--- a/index.html
+++ b/index.html
@@ -355,7 +355,45 @@ body.dark .icon {
 </div>
   </div>
 
-  <!-- Card 3 -->
+<!-- Card 3 -->
+  <div class="iphone-frame">
+    <h1>This July </h1>
+    <h2>Happiness Program</h2>
+    <p class="subtitle">with Vishal Merani & Tanmay Shah 🎉 </p>
+    <h3>Hyper Detox with Sudarshan Kriya</h3>
+    <p class="subtitle">In person | English, Hindi</p>
+
+    <a href="https://programs.vvmvp.org/events/553/" class="button" target="_blank"> July 29 – Aug 03, Register here</a>
+
+    <ul class="timeline">
+      <li><strong>Time </strong> 7:00 PM - 9:00 PM </li>
+    </ul>
+
+    <ul class="features">
+      <li>Regular follow-ups</li>
+      <li>Free repeats outside ashram</li>
+    </ul>
+
+    <ul class="timeline">
+      <li><strong>📍Fortale Prime, JP Nagar 8th Phase, Jambu savari</strong><br>Bengaluru, Karnataka</li>
+    </ul>
+
+    <a href="https://maps.app.goo.gl/Z1NnMr2MvozvDgBm7" class="button" target="_blank">On Maps</a>
+
+   <h4 class="queries-text">Queries & help @ +917507180332, +919158888206 </h4>
+
+    <div class="copy-box">
+      <input class="copy-input" type="text" value="Happiness Program | 29 Jul – 03 Aug 2025 |  https://aolt.in/891043 | Help: 9818503888" id="copyText22" readonly>
+      <button class="copy-btn" onclick="copyToClipboard('copyText22', this)">Copy</button>
+      <a class="wa-icon" target="_blank" id="waLink2" title="Share on WhatsApp"></a>
+    </div>
+
+    <div class="footer">🦦🤌🏻 Starts 29 July 2025 | Bangalore ♡ JP Nagar <br>
+ॐ  Jai Guru Dev ॐ
+</div>
+  </div>
+
+  <!-- Card 4 -->
   <div class="iphone-frame">
     <h1>mostly Monthly,</h1>
     <h2>Online</h2>
@@ -394,7 +432,7 @@ body.dark .icon {
 
 
 
-  <!-- Card 4 -->
+  <!-- Card 5 -->
   <div class="iphone-frame">
     <h1>Scanning,</h1>
     <h2>KaalGyaan Sessions</h2>
@@ -427,7 +465,7 @@ body.dark .icon {
   </div>
 
 
-  <!-- Card 5 -->
+  <!-- Card 6 -->
   <div class="iphone-frame">
     <h1>Pain Management,</h1>
     <h2>L&B Sessions</h2>
@@ -452,7 +490,7 @@ body.dark .icon {
 </div>
   </div>
 
- <!-- Card 6 -->
+ <!-- Card 7 -->
   <div class="iphone-frame">
     <h1> Workshop,</h1>
     <h2> Meditation and Breath </h2></h2>
@@ -465,6 +503,7 @@ body.dark .icon {
 
     <ul class="timeline">
     <li>Time: 6:30 AM – 08:30 AM</li>
+      <li> Time: Weekends: 7:00 AM - 9:00 AM </li>
     <li><strong>📍 Online, Zoom </strong></li>
     </ul>
 
@@ -483,14 +522,14 @@ body.dark .icon {
   </div>
 
 
-<!-- Card 7 - Image Only -->
+<!-- Card 8 - Image Only -->
 <div class="iphone-frame" style="padding: 0; border: none; box-shadow: none;">
   <img src="zenvm.png" alt="Meditation Image" style="width: 100%; border-radius: 20px;"/>
     
   </div>
 </div>
 
-<!-- Podcast Card -->
+<!-- Podcast -  Card 9 -->
  <div class="iphone-frame">
   <h1>Podcasts</h1>
   <h2>With Vishal Merani</h2>
@@ -503,7 +542,7 @@ body.dark .icon {
 
 
 
-<!-- Social Card -->
+<!-- Social - Card 9 -->
 <div class="iphone-frame" style="text-align: center; padding-top: 24px;">
   <h1>To stay connected,</h1>
   <h2>@MeraniVishal</h2>
