--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@ body.dark .icon {
 
     <ul class="timeline">
     <li>Time: 6:30 AM – 08:30 AM</li>
-      <li> Time: Weekends: 7:00 AM - 9:00 AM </li>
+      <li> Weekends: 7:00 AM - 9:00 AM </li>
     <li><strong>📍 Online, Zoom </strong></li>
     </ul>
 
