Update index.html - JP correction

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ body.dark .icon {
     <h3>Hyper Detox with Sudarshan Kriya</h3>
     <p class="subtitle">In person | English, Hindi</p>
 
-    <a href="https://programs.vvmvp.org/events/553/" class="button" target="_blank"> July 29 – Aug 03, Register here</a>
+    <a href="https://www.artofliving.online/registration.php?event_id=890542" class="button" target="_blank"> July 29 – Aug 03, Register here</a>
 
     <ul class="timeline">
       <li><strong>Time </strong> 7:00 PM - 9:00 PM </li>
