--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ body.dark .icon {
  <div class="iphone-frame">
   <h1>Programs</h1>
   <h2>List</h2>
-  <a href="https://www.artofliving.org/node/1302793" class="button" target="_blank">Check here ❤️</a>
+  <a href="https://www.artofliving.org/node/1302793" class="button" target="_blank">Check here ♡ </a>
   <p class="subtitle">Next up, Lined up 🎺</p>
   <div class="footer"> <br>
 ॐ  Jai Guru Dev ॐ
@@ -294,7 +294,7 @@ body.dark .icon {
   <h2>Secrets of the Subtle</h2>
   <h3>at Kashyapa hall for Ashramites</h3>
   <h4>You can also watch here 👇  or in AOL app </h4>
-  <a href="https://www.youtube.com/watch?v=2lgWqTEZRjk" class="button" target="_blank">Check here ❤️</a>
+  <a href="https://www.youtube.com/watch?v=2lgWqTEZRjk" class="button" target="_blank"> Watch ❤</a>
   <p class="subtitle"> Drop your take aways on insta stories and don't forget to tag us</p>
   <ul class="features">
       <li>21-31 July</li>
