--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ body.dark .icon {
   <h1>Currently screening</h1>
   <h2>Secrets of the Subtle</h2>
   <h3>at Kashyapa hall for Ashramites</h3>
-  <h4>You can also watch here 👇  or in AOL app <a href="https://www.youtube.com/watch?v=2lgWqTEZRjk" class="button" target="_blank"> Watch ❤</a> </h4>
+  <h4>You can also  <a href="https://www.youtube.com/watch?v=2lgWqTEZRjk" class="button" target="_blank"> Watch ❤</a> here or in AOL app </h4>
   <ul class="features">
       <li>21-31 July</li>
       <li> class="subtitle"> Drop your take aways on insta stories and don't forget to tag us</li>
