--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ body.dark .icon {
   <h4>You can also  <a href="https://www.youtube.com/watch?v=2lgWqTEZRjk" class="button" target="_blank"> Watch ❤</a> here or in AOL app </h4>
   <ul class="features">
       <li>21-31 July</li>
-      <li> class="subtitle"> Drop your take aways on insta stories and don't forget to tag us</li>
+      <li> Drop your take aways on insta stories and don't forget to tag us</li>
     </ul>
   <div class="footer">
 ॐ  Jai Guru Dev ॐ
