--- a/index.html
+++ b/index.html
@@ -166,7 +166,9 @@
       font-size: 0.65rem;
       color: var(--muted);
       text-align: center;
-      margin-top: 1.8rem;
+      margin-top: 0.9rem;      /* reduced from 1.8rem */
+  margin-bottom: 0.5rem;   /* add this line if not present */
+  line-height: 1;  
     }
 
 .iphone-frame {
