--- a/index.html
+++ b/index.html
@@ -294,11 +294,11 @@ body.dark .icon {
  <div class="iphone-frame">
   <h1>Currently screening</h1>
   <h2>Secrets of the Subtle</h2>
-  <h3>at Kashyapa hall for Ashramites</h3>
+  <p>at Kashyapa hall for Ashramites</p>
   <h4>You can also  <a href="https://www.youtube.com/watch?v=2lgWqTEZRjk" class="button" target="_blank"> Watch ❤</a> here or in AOL app </h4>
   <ul class="features">
       <li>21-31 July</li>
-      <li> Drop your take aways on insta stories and don't forget to tag us</li>
+      <li>Tag us in your story takeaways!</li>
     </ul>
   <div class="footer">
 ॐ  Jai Guru Dev ॐ
