--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ body.dark .icon {
  <div class="iphone-frame">
   <h1>Currently screening</h1>
   <h2>Secrets of the Subtle</h2>
-  <p>at Kashyapa hall for Ashramites</p>
+  <p class = "subtitle">at Kashyapa hall for Ashramites</p>
   <h4>You can also  <a href="https://www.youtube.com/watch?v=2lgWqTEZRjk" class="button" target="_blank"> Watch ❤</a> here or in AOL app </h4>
   <ul class="features">
       <li>21-31 July</li>
