--- a/index.html
+++ b/index.html
@@ -355,11 +355,9 @@ body.dark .icon {
 </div>  
 </div>
 
-
-
 <!-- Serets of the Subtle Image Only -->
-<div class="iphone-frame subtle-card-with-text">
-  <img src="SecretsoftheSubtle.png" alt="Secrets of the Subtle" />
+<div class="iphone-frame subtle-card-with-text" style="padding: 0; border: none; box-shadow: none;">
+  <img src="SecretsoftheSubtle.png" alt="Secrets of the Subtle" style="width: 100%; border-radius: 20px;" />
   <div class="overlay-text">Secrets of the Subtle</div>
 </div>
 
