--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ body.dark .icon {
 
 <!-- Secrets of the Subtle  -->
  <div class="iphone-frame">
-  <h1>Currently screening</h1>
+  <h1>Currently Screening</h1>
   <h2>Secrets of the Subtle</h2>
   <p class = "subtitle">at Kashyapa hall for Ashramites</p>
   <h4>You can also  <a href="https://www.youtube.com/watch?v=2lgWqTEZRjk" class="button" target="_blank"> Watch ❤</a> here or in AOL app </h4>
@@ -358,7 +358,8 @@ body.dark .icon {
 <!-- Serets of the Subtle Image Only -->
 <div class="iphone-frame subtle-card-with-text" style="padding: 0; border: none; box-shadow: none;">
   <img src="SecretsoftheSubtle.png" alt="Secrets of the Subtle" style="width: 100%; border-radius: 20px;" />
-  <div class="overlay-text">Secrets of the Subtle</div>
+  <div class="overlay-text">7:30PM Onwards, 21-31 July</div>
+  <div class="overlay-text"> 𓆩𓆪 @️ Kashyapa Hall </div>
 </div>
 
 
