--- a/index.html
+++ b/index.html
@@ -358,8 +358,7 @@ body.dark .icon {
 <!-- Serets of the Subtle Image Only -->
 <div class="iphone-frame subtle-card-with-text" style="padding: 0; border: none; box-shadow: none;">
   <img src="SecretsoftheSubtle.png" alt="Secrets of the Subtle" style="width: 100%; border-radius: 20px;" />
-  <div class="overlay-text">7:30PM Onwards, 21-31 July</div>
-  <div class="overlay-text"> 𓆩𓆪 @️ Kashyapa Hall </div>
+  <div class="overlay-text"> 𓆩𓆪 Kashyapa Hall 21-31 July 7:30p </div>
 </div>
 
 
